# CineReserve

./: .env.example  .gitignore  README.md  pyproject.toml
core/: settings.py  urls.py
movies/: models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py  0002_session.py  0003_seat.py  0004_reservation.py  0005_ticket.py
